--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
+  "workspaces": [
+    "server",
+    "app"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@trpc/client": "^11.0.1",
+    "@trpc/server": "^11.0.1"
   }
 }
