--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
     "app"
   ],
   "scripts": {
+    "dev:app": "npm run dev --workspace=app",
+    "build:app": "npm run build --workspace=app",
+    "dev:server": "npm run dev --workspace=server",
+    "build:server": "npm run build --workspace=server",
+    "dev": "npm-run-all --parallel dev:app dev:server",
+    "build": "npm-run-all --parallel dev:app dev:server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@trpc/client": "^11.0.1",
     "@trpc/server": "^11.0.1"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
