--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "server",
+  "name": "@trpc-quickstart/server",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "dist/src/main.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
     "dev": "tsx src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@trpc/server": "^11.0.1"
+    "@trpc/server": "^11.0.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.13.17",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
