--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx src/main.ts",
+    "build:watch": "tsc --watch",
+    "start": "tsx --watch src/main.ts",
+    "dev": "npm-run-all --parallel build:watch start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "^22.13.17",
+    "npm-run-all": "^4.1.5",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
