--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "@trpc/server": "^11.0.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "ws": "^8.18.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "^22.13.17",
+    "@types/ws": "^8.18.1",
     "npm-run-all": "^4.1.5",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
